# mininet-agentic-ai

./: .gitignore  CONTAINERNET_SETUP.md  CONTEXT_OPTIMIZATION.md  GUI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_MIGRATION.md  QUICKSTART.md  README.md  Readme.md  SETUP.md  pyproject.toml  requirements-langgraph.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
gui/: README.md  app.py  datacenter_topology.json  datacenter_topology_large.json  requirements.txt
gui/public/: index.html
src/gen_engine_deep_eval/: __init__.py  datacenter_agent.py  gui_adapter.py  helpers.py  interactive_agent_runner.py  llm.py  mininet_agent.py  models.py  observer_agent.py  wrapper.py
src/gen_engine_deep_eval/examples/: __init__.py  integrated_demo.py  run_observer_graph.py
src/gen_engine_deep_eval/graphs/: __init__.py  datacenter_graph.py  gui_datacenter_graph.py  interactive_datacenter_graph.py  observer_graph.py  state_schemas.py  tools.py
tests/: test_datacenter_graph.py  test_gui_adapter.py  test_gui_workflow.py  test_mininet_agent.py  test_observer_graph.py
